log
Thu 07 Sep 2023 03:03:04 AM UTC: 
 tests:  0|6
total_score: 0/70
01e94e3
Thu 07 Sep 2023 07:46:03 PM UTC: 
 hashmap.c | 13 ++++++++++++-
 1 file changed, 12 insertions(+), 1 deletion(-)
 tests:  1|5
total_score: 10/70
6d223ee
Thu 07 Sep 2023 08:17:21 PM UTC: 
 hashmap.c | 10 +++++++++-
 1 file changed, 9 insertions(+), 1 deletion(-)
In file included from test.c:4:
hashmap.c: In function ‘insertMap’:
hashmap.c:47:3: error: unknown type name ‘Node’
   47 |   Node* newNode=createNode(key, value);
      |   ^~~~
hashmap.c:47:17: error: implicit declaration of function ‘createNode’ [-Werror=implicit-function-declaration]
   47 |   Node* newNode=createNode(key, value);
      |                 ^~~~~~~~~~
hashmap.c:47:17: error: initialization of ‘int *’ from ‘int’ makes pointer from integer without a cast [-Werror=int-conversion]
hashmap.c:49:10: error: request for member ‘next’ in something not a structure or union
   49 |   newNode->next=map->buckets[index];
      |          ^~
hashmap.c:50:22: error: assignment to ‘Pair *’ from incompatible pointer type ‘int *’ [-Werror=incompatible-pointer-types]
   50 |   map->buckets[index]=newNode;
      |                      ^
hashmap.c:51:14: error: expected ‘;’ before ‘map’
   51 |   map->size++
      |              ^
      |              ;
   52 |   map->current=index;
      |   ~~~         
cc1: all warnings being treated as errors
Compilation failed
f8e1d69
Thu 07 Sep 2023 08:18:24 PM UTC: 
 hashmap.c | 4 ++++
 1 file changed, 4 insertions(+)
In file included from test.c:4:
hashmap.c: In function ‘insertMap’:
hashmap.c:51:3: error: unknown type name ‘Node’
   51 |   Node* newNode = createNode(key, value);
      |   ^~~~
hashmap.c:51:19: error: implicit declaration of function ‘createNode’ [-Werror=implicit-function-declaration]
   51 |   Node* newNode = createNode(key, value);
      |                   ^~~~~~~~~~
hashmap.c:51:19: error: initialization of ‘int *’ from ‘int’ makes pointer from integer without a cast [-Werror=int-conversion]
hashmap.c:53:10: error: request for member ‘next’ in something not a structure or union
   53 |   newNode->next=map->buckets[index];
      |          ^~
hashmap.c:54:22: error: assignment to ‘Pair *’ from incompatible pointer type ‘int *’ [-Werror=incompatible-pointer-types]
   54 |   map->buckets[index]=newNode;
      |                      ^
hashmap.c:55:14: error: expected ‘;’ before ‘map’
   55 |   map->size++
      |              ^
      |              ;
   56 |   map->current=index;
      |   ~~~         
cc1: all warnings being treated as errors
Compilation failed
b45588c
Thu 07 Sep 2023 08:20:41 PM UTC: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:4:
hashmap.c: In function ‘insertMap’:
hashmap.c:52:3: error: unknown type name ‘Node’
   52 |   Node* newNode = createNode(key, value);
      |   ^~~~
hashmap.c:52:19: error: implicit declaration of function ‘createNode’ [-Werror=implicit-function-declaration]
   52 |   Node* newNode = createNode(key, value);
      |                   ^~~~~~~~~~
hashmap.c:52:19: error: initialization of ‘int *’ from ‘int’ makes pointer from integer without a cast [-Werror=int-conversion]
hashmap.c:54:10: error: request for member ‘next’ in something not a structure or union
   54 |   newNode->next=map->buckets[index];
      |          ^~
hashmap.c:55:22: error: assignment to ‘Pair *’ from incompatible pointer type ‘int *’ [-Werror=incompatible-pointer-types]
   55 |   map->buckets[index]=newNode;
      |                      ^
cc1: all warnings being treated as errors
Compilation failed
d7ae8e7
Thu 07 Sep 2023 08:31:56 PM UTC: 
 hashmap.c | 25 +++++++++++++++----------
 1 file changed, 15 insertions(+), 10 deletions(-)
 tests:  2|5
total_score: 10/70
ecff0aa
Thu 07 Sep 2023 08:36:15 PM UTC: 
 hashmap.c | 7 ++++---
 1 file changed, 4 insertions(+), 3 deletions(-)
In file included from test.c:4:
hashmap.c: In function ‘insertMap’:
hashmap.c:55:38: error: ‘k’ undeclared (first use in this function)
   55 |       Pair* currentPair=map->buckets[k];
      |                                      ^
hashmap.c:55:38: note: each undeclared identifier is reported only once for each function it appears in
Compilation failed
104b738
Thu 07 Sep 2023 08:36:24 PM UTC: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  1|5
total_score: 10/70
4a580a9
Thu 07 Sep 2023 08:38:21 PM UTC: 
 hashmap.c | 7 +++----
 1 file changed, 3 insertions(+), 4 deletions(-)
 tests:  2|5
total_score: 10/70
e3c20aa
